--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="heading">P2P Media example</h1>
+      <h1 class="heading">P2P Media example  test-200602</h1>
       <p class="note">
         Enter remote peer ID to call.
       </p>
