--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
       <p class="meta" id="js-meta"></p>
     </div>
     <script src="//cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script>
+    <!-- <script src="https://cdn.webrtc.ecl.ntt.com/skyway-latest.js"></script> -->
     <!-- <script src="../_shared/key.js"></script> -->
     <script src="../shared/key.js"></script>
     <script src="./script.js"></script>
