--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="../shared/style.css">
   </head>
   <body>
-    <div class="container">
+    <div id="test-1" class="container">
       <h1 class="heading">P2P Media example  test-200602-b</h1>
       <p class="note">
         Enter remote peer ID to call.
       </p>
-      <div class="p2p-media">
-        <div class="remote-stream">
+      <div id="test-2" class="p2p-media">
+        <div id="test-3" class="remote-stream">
           <video id="js-remote-stream"></video>
         </div>
-        <div class="local-stream">
+        <div id="test-4" class="local-stream">
           <video id="js-local-stream"></video>
           <p>Your ID: <span id="js-local-id"></span></p>
           <input type="text" placeholder="Remote Peer ID" id="js-remote-id">
